--- a/style.css
+++ b/style.css
@@ -184,8 +184,8 @@ html{
 }
 
 .work__steps{
-    width: 70%;
-    height: 600px;
+    width: 100%;
+    /* height: 600px; */
     margin: 0 auto 54px;
     display: flex;
     align-items: center;
@@ -193,20 +193,19 @@ html{
 }
 
 .work__step--img{
-    order: 1;
+    /* order: 1; */
     width: 270px;
     height: 525px;
     object-fit: cover;
 }
 
+.work__step--img{
+    margin: 0 20px;
+}
+
 .work__step--text{
-    order: 2;
-    height: 40%;
-    width: 50%;
-    display: flex;
-    align-items: start;
-    flex-direction: column;
-    justify-content: space-around;
+    flex: 1;
+    margin: 0 60px;
 }
 
 .work__step--name{
@@ -229,13 +228,13 @@ html{
     color: var(--text-color);
 }
 
-.work__steps:nth-child(even) img{
+/* .work__steps:nth-child(2) .work__step--img{
     order: 2;
 }
 
-.work__steps:nth-child(even) .work__step--text{
+.work__steps:nth-child(2) .work__step--text{
     order: 1;
-}
+} */
 
 /* Download */
 .download{
@@ -391,38 +390,21 @@ html{
         height: 100%;
     }
     /* Work */
-    .work{
-        /* height: 1000px; */
-        width: 100%;
-    }
-
     .work__heading{
         font-weight: 600;
         font-size: 24px;
         line-height: 36px;
-        margin: 48px;
-        display: block;
     }
     .work__steps{
-        display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-    .work__step--text{
-        width: 100%;
-        height: 100%;
-        order: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
     }
     .work__step--img{
         order: 2;
-        display: block;
+    }
+    .work__step--text{
+        order: 1;
+        text-align: center;
+        width: 50%;
     }
     .work__step--name{
         font-weight: 700;
@@ -432,15 +414,14 @@ html{
     .work__step--heading{
         font-weight: 700;
         font-size: 40px;
-        line-height: 40px;
-        margin: 24px 0;
+        line-height: 57px;
+        margin: 40px 0 50px;
     }
     .work__step--desc{
         font-weight: 500;
         font-size: 24px;
         line-height: 38px;
     }
-
     /* Download */
     .download{
         background-image: none;
@@ -460,10 +441,13 @@ html{
     .download__btn{
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
+        flex-direction: column;
         /* border: var(--primary-color); */
     }
-    
+    .download__btn--appstore{
+        margin-top: 12px;
+    }
     /* Footer */
     .footer {
         display: flex;
