--- a/style.css
+++ b/style.css
@@ -192,18 +192,11 @@ html{
     justify-content: space-around;
 }
 
-.work__steps:nth-child(2){
-    flex-wrap: wrap-reverse;
-}
-
 .work__step--img{
     /* order: 1; */
     width: 270px;
     height: 525px;
     object-fit: cover;
-}
-
-.work__step--img{
     margin: 0 20px;
     order: 1;
 }
@@ -232,6 +225,10 @@ html{
     font-size: 24px;
     line-height: 38px;
     color: var(--text-color);
+}
+
+.side-right{
+    flex-direction: row-reverse;
 }
 
 /* Download */
